--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 :root {
     /* --main-color: rgba(104, 131, 255, 0.95); */
     --main-color: #a1a1a1;
-    --background-color: linear-gradient(rgba(0, 0, 0, 0.90), rgba(14, 2, 20, 0.85));
+    /* --background-color: linear-gradient(rgba(0, 0, 0, 0.90), rgba(14, 2, 20, 0.85)); */
+    --background-color: rgba(0, 0, 0, 0.90);
     --font-color: rgba(255, 255, 255, 0.9);
     user-select: none;
 }
@@ -33,13 +34,6 @@ html,
 body,
 #root {
     height: fit-content;
-    /* padding-top: 1px;
-    padding-bottom: 1px; */
-
-    width: calc(100% - 8px);
-    margin-left: 4px;
-    margin-top: 4.5px;
-    border-radius: 10px;
     /* border: 1px solid #a1a1a1; */
 }
 
@@ -47,13 +41,15 @@ body,
     /* background: transparent; */
     
     /* border-bottom: 1px solid rgb(255 255 255 / 5%); */
-    /* background: linear-gradient(rgb(0 0 0 / 50%), rgb(5 2 20 / 45%)); */
-
     background: linear-gradient(rgb(0 0 0 / 70%), rgb(5 2 20 / 55%));
-    /* backdrop-filter: blur(10px); */
-    border: 1px solid #a1a1a1;
-}
 
+    /* background: linear-gradient(rgb(0 0 0 / 70%), rgb(5 2 20 / 55%)); */
+    /* backdrop-filter: blur(10px); */
+    /* border-bottom: 1px solid #a1a1a1; */
+
+    /* backdrop-filter: blur(100px);
+    background-color: rgba(0, 0, 0, 0.1); */
+}
 
 .app {
     display: grid;
@@ -62,6 +58,7 @@ body,
     height: 100%;
     /* padding app */
     /* padding: 2px 0.5vw; */
+    padding: 4px;
     white-space: nowrap;
 }
 
@@ -78,6 +75,11 @@ body,
 
 .right {
     justify-self: end;
+    margin-right: 7px;
+}
+
+.left {
+    margin-left: 7px;
 }
 
 .keyboard,
@@ -159,10 +161,10 @@ body,
     background: var(--background-color);
     /* border: 2px solid var(--main-color); */
     padding: 0.5em 1em;
-    border-radius: 1em;
+    border-radius: 15px;
     display: flex;
     align-items: center;
-    backdrop-filter: invert(1);
+    /* backdrop-filter: invert(1); */
     transition: all 0.3s, transform 0.3s;
 }
 
@@ -218,7 +220,7 @@ body,
 
 .settings {
     background: rgb(255 255 255 / 15%);
-    margin-right: 4px;
+    /* margin-right: 4px; */
     padding: 3px 8px;
     color: var(--font-color);
     border: none;
